# anime.rs

./: Cargo.toml  README.md  consumed.js
examples/: ergonomics.rs
src/: lib.rs  target.rs  util.rs
src/builder/: mod.rs  property.rs
src/easings/: bezier.rs  helpers.rs  mod.rs  spring.rs
src/engine/: instance.rs  interface.rs  internals.rs  mod.rs
src/path/: mod.rs
src/properties/: css_property.rs  css_transform.rs  dom_attribute.rs  mod.rs  svg_attribute.rs  value.rs
